# netbox-plugin-bind-provisioner

./: .gitignore  CHANGELOG.md  README.md  netbox-bind-endpoint.service  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: architecture-overview.drawio  install-systemd-service.md
netbox_dns_bridge/: __init__.py  catalog_zone_manager.py  dns_server.py  models.py  request_handler.py  signals.py  utils.py
netbox_dns_bridge/management/commands/: dns-export-zone.py  dns-settings.py  dns-transfer-endpoint.py  export-all-dns-zones.py  export-dns-zone.py
netbox_dns_bridge/migrations/: 0001_initial.py
netbox_dns_bridge/service/endpoint/: catalog_zone_manager.py  dns_server.py
src/netbox_bind_provisioner/: __init__.py
src/netbox_plugin_bind_provisioner/: __init__.py  models.py  signals.py  utils.py
src/netbox_plugin_bind_provisioner/management/commands/: bind-transfer-endpoint.py  dns-transfer-endpoint.py
src/netbox_plugin_bind_provisioner/migrations/: 0001_initial.py  0003_catalogzonememberidentifier.py  0004_alter_catalogzonememberidentifier_zone.py  0005_alter_catalogzonememberidentifier_zone.py
src/netbox_plugin_bind_provisioner/service/endpoint/: catalog_zone_manager.py  request_handler.py
src/netbox_plugin_bind_provisioner/signals/: catalog_zone.py  dns_notify.py
