[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-plugin-dns-bridge"
dynamic = ["version"]
description = "A bridge between netbox-plugin-dns and your DNS infrastructure."
authors = [
    { name = "Sven Luethi" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
"netbox-plugin-dns>=1.5.0",
"dnspython>=2.8.0"
]

[tool.setuptools]
include-package-data = true
zip-safe = false
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "netbox_dns_bridge.__version__" }

[project.urls]
Homepage = "https://github.com/Suraxius/netbox-plugin-bind-provisioner"
Issues = "https://github.com/Suraxius/netbox-plugin-bind-provisioner/issues"
